<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apelido" />

        <TextView
            android:id="@+id/tv_pat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pat"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pat_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_23" />


        <EditText
            android:id="@+id/et_apelido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="20"
            android:hint="@string/digite_seu_apelido"
            android:inputType="text"
            android:maxLength="20" />

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btn_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_dados_da_api" />

        <Button
            android:id="@+id/btn_lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_lista" />

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirar_foto" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>